@@ -37,7 +37,7 @@ from ftransc.utils.convert import (
                                   )
 
 #_______ global vars _________
-VERSION = '4.2.9'
+VERSION = '4.3.0'
 LOGFILE = '/dev/null'
 SILENT  = False
 
@@ -177,7 +177,6 @@ class CoverTag(object):
             elif ext == '.m4a':
                 self.coverart['data'] = tags[tag][0]
             elif ext in ('.ogg', '.flac'):
-                print 'ogg extract'
                 encoded_image = tags[tag][0]
                 image = mutagen.flac.Picture(base64.b64decode(encoded_image))
                 self.coverart['data'] = image.data
@@ -268,6 +267,7 @@ def upgrade_version(current_version):
     
     trunk_url = 'http://ftransc.googlecode.com/svn/trunk/'
     tmp_dir = '/tmp/tmp-ftransc_upgrade-tmp'
+    ftransc_doc_dir = '/usr/share/doc/ftransc'
     if os.environ['USER'] != 'root':
         raise SystemExit('try using "sudo", you have to be "root" on this one.')
     target  = '%s/version' % trunk_url
@@ -284,12 +284,13 @@ def upgrade_version(current_version):
             subprocess.Popen(cmd, 
                              stdout=subprocess.PIPE, 
                              stderr=devnull).communicate()
-            os.chdir(tmp_dir)
+            os.chdir(ftransc_doc_dir)
             cmd = ['make', 'uninstall']
             subprocess.Popen(cmd, 
                              stdout=subprocess.PIPE, 
                              stderr=devnull).communicate()
             cmd = ['make', 'install']
+            os.chdir(tmp_dir)
             subprocess.Popen(cmd, 
                              stdout=subprocess.PIPE, 
                              stderr=devnull).communicate()
@@ -309,28 +310,26 @@ def print2(msg, noreturn=False):
         else:
             print msg
 
-def m3u_extract(playlist):
+def read_playlist(playlist):
     try:
-        songs = open(playlist, 'r').readlines()
+        return open(playlist, 'r').readlines()
     except IOError:
         raise SystemExit('unable to read playlist file: %s' % (str(playlist)))
-    return [s.strip() for s in songs if s and not s.startswith('#')]
+
+def m3u_extract(playlist):
+    songs = [s.replace('file:/', '') for s in read_playlist(playlist) if s]
+    return [urllib.url2pathname(song.strip()) for song in songs \
+            if song and not song.startswith('#')]
 
 def pls_extract(playlist):
-    try:
-        songs = open(playlist, 'r').readlines()
-    except IOError:
-        raise SystemExit('unable to read playlist file: %s' % (str(playlist)))
+    songs = read_playlist(playlist)
     return [i.strip().split('file://')[1] \
             for i in songs if i.strip().startswith('File')] 
 
 def xspf_extract(playlist): 
-    try:
-        songs = open(playlist, 'r').readlines()
-    except IOError:
-        raise SystemExit('unable to read playlist file: %s' % (str(playlist)))
-    return [i.strip().replace('<location>file://', '').replace('</location>', '') \
-            for i in songs if '<location>file://' in i]
+    songs = read_playlist(playlist)
+    return [urllib.url2pathname(song.strip().replace('<location>file://', '').replace('</location>', '')) \
+            for song in songs if '<location>file://' in song]
 
 supported_formats = set(['mp3', 'wma', 'wav', 'ogg', 'flac', 'm4a', 'mpc'])
 quality_presets = {
@@ -390,6 +389,8 @@ if __name__ == "__main__":
     parser.add_option('--m3u', help='Convert files in the m3u playlist file')
     parser.add_option('--pls', help='Convert files in the pls playlist file')
     parser.add_option('--xspf', help='Convert files in the xspf playlist file')
+    parser.add_option('-o', '--outdir', 
+            help='Put converted file into specified folder')
     opt, files = parser.parse_args()
     
     if opt.upgrade:
@@ -451,6 +452,15 @@ if __name__ == "__main__":
         pwd = os.getcwd()
         os.chdir(dest_dir)
 
+    outdir = ''
+    if opt.outdir is not None:
+        outdir = os.path.abspath(os.path.expanduser(opt.outdir))
+        if not os.path.isdir(outdir):
+            try:
+                os.mkdir(outdir)
+            except OSError:
+                outdir = ''
+
     if opt.m3u is not None:
         files = m3u_extract(opt.m3u)
     elif opt.pls is not None:
@@ -468,15 +478,20 @@ if __name__ == "__main__":
         tic = time.time()
         logfile = open(LOGFILE, 'a', 0)
         ofile = os.path.splitext(ifile)[0] + "." + fmt 
+        if outdir:
+            ofile = outdir + os.sep + ofile
+            if not outdir.endswith(os.sep):
+                outdir += os.sep
         if new_dir:
             if not os.path.isabs(new_dir):
                 new_dir = home + os.path.sep + new_dir
+
             new_dir = os.path.realpath(new_dir)
             if new_dir != os.getcwd():
                 os.chdir(new_dir)
                 print2("\n___ Working Directory '%s' ___ " % new_dir)
         else:
-            if os.getcwd() != home:
+            if os.getcwd() != home and not os.walk:
                 os.chdir(home)
                 print2("\n___ Working Directory '%s' ___ " % home)
 
@@ -533,7 +548,7 @@ if __name__ == "__main__":
         else:
             print2('%s%d/%d%s | to %s | %s%s%s ...' % \
                     (pk, c + 1, total, nc, fmt.upper(), bl, ifile, nc))
-        if converters[fmt](ifilename, in_ext, logfile, preset=preset):
+        if converters[fmt](ifilename, in_ext, logfile, outdir, preset=preset):
             print2("%sSuccess%s" % (gr, nc), noreturn=True)
             if opt.remove: 
                 dummy = os.remove(ifile)
